# zvec-rust-binding

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: BUILD.md
zvec-bindings/: Cargo.toml  README.md
zvec-bindings/examples/: basic.rs  crud.rs  fts.rs  group_by.rs  hybrid.rs  indexes.rs  search.rs  sparse.rs  version.rs
zvec-bindings/src/: collection.rs  doc.rs  error.rs  fts.rs  lib.rs  multi_query.rs  query.rs  rerank.rs  schema.rs  sync.rs  types.rs
zvec-bindings/tests/: coverage_tests.rs  integration_test.rs
zvec-sys/: Cargo.toml  build.rs
zvec-sys/c-api-static/: CMakeLists.txt
zvec-sys/groupby-shim/: CMakeLists.txt  groupby.cpp
zvec-sys/groupby-shim/include/: zvec_groupby_shim.h
zvec-sys/zvec-c-wrapper/src/: collection.cpp
